# course_work_3

./: pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
